ecmascript/parser/tests/test262-error-references/fail/f4467d719dcee086.js.stderr
error: Unexpected token Some(BinOp(Mul))
 --> $DIR/tests/test262-parser/fail/f4467d719dcee086.js:2:1
  |
2 | *a}
  | ^

